@@ -1,3 +1,9 @@
+2008-04-17	Andrei Krueger	<anc/at/iki/dot/fi>
+
+	* ima/resources/fi.ts:
+	* ima/resources/fi.qm:
+	updated Finnish localization-files
+
 2008-04-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	*  ima/src/dialogs.cpp:
